Fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,11 @@ a:hover {
 }
 
 .fg-lightgray {
-  color: #cccccc !important;
+  color: #a3a3a3 !important;
+}
+
+.bg-darkgray {
+  background: #1d2124;
 }
 
 .bg-gray {
